<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context="com.example.hai.eventfinder.Tab2">

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <!-- TODO: Update blank fragment layout -->

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginTop="8dp"
            android:text="@string/create_event"
            android:textColor="@color/colorAccent"
            android:textSize="24sp"
            android:textStyle="bold"

            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.05" />

        <Button
            android:id="@+id/button2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="35dp"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:text="@string/submit"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent" />

        <RadioGroup
            android:layout_width="110dp"
            android:layout_height="83dp"
            android:layout_marginTop="22dp"
            app:layout_constraintTop_toBottomOf="@+id/textView2"
            android:id="@+id/radioGroup"
            android:layout_marginEnd="27dp"
            app:layout_constraintRight_toRightOf="parent">

            <RadioButton
                android:id="@+id/radioButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/option1" />

            <RadioButton
                android:id="@+id/radioButton2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/option2" />
        </RadioGroup>

        <TextView
            android:id="@+id/textView3"
            android:layout_width="159dp"
            android:layout_height="41dp"
            android:text="@string/who_can_view"
            android:textStyle="bold"
            app:layout_constraintRight_toLeftOf="@+id/radioGroup"
            android:layout_marginEnd="15dp"
            android:layout_marginStart="8dp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="79dp"
            app:layout_constraintHorizontal_bias="0.547"
            android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toTopOf="@+id/editText" />

        <EditText
            android:id="@+id/editText"
            android:layout_width="290dp"
            android:layout_height="40dp"
            android:ems="10"
            android:hint="@string/enter_location"
            android:textStyle="bold"
            android:inputType="textPostalAddress"
            android:textSize="14sp"
            android:layout_marginTop="24dp"
            app:layout_constraintTop_toBottomOf="@+id/radioGroup"
            android:layout_marginRight="8dp"
            app:layout_constraintRight_toRightOf="parent"
            android:layout_marginLeft="8dp"
            app:layout_constraintLeft_toLeftOf="parent" />

        <Button
            android:id="@+id/pickDate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/chooseDate"

            android:layout_marginTop="30dp"
            app:layout_constraintTop_toBottomOf="@+id/editText"
            android:layout_marginStart="50dp"
            app:layout_constraintLeft_toLeftOf="parent"
             />

        <!--android:onClick="showDatePickerDialog"-->

        <Button
            android:id="@+id/pickTime"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:text="@string/chooseTime"

            app:layout_constraintTop_toBottomOf="@+id/editText"
            android:layout_marginEnd="50dp"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintLeft_toRightOf="@+id/pickDate"
            android:layout_marginStart="8dp"
            app:layout_constraintHorizontal_bias="1.0" />

        <!--android:onClick="showTimePickerDialog"-->


        <EditText
            android:id="@+id/timeEdit"
            android:layout_width="110dp"
            android:layout_height="46dp"
            android:ems="10"
            android:inputType="time"
            android:text=""
            android:layout_marginEnd="47dp"
            app:layout_constraintRight_toRightOf="parent"
            android:layout_marginTop="15dp"
            app:layout_constraintTop_toBottomOf="@+id/pickTime"
            android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toTopOf="@+id/button2"
            android:layout_marginRight="47dp" />

        <EditText
            android:id="@+id/dateEdit"
            android:layout_width="116dp"
            android:layout_height="46dp"
            android:ems="10"
            android:inputType="date"
            android:text=""
            android:layout_marginTop="15dp"
            app:layout_constraintTop_toBottomOf="@+id/pickDate"
            android:layout_marginStart="47dp"
            app:layout_constraintLeft_toLeftOf="parent"
            android:layout_marginEnd="8dp"
            android:layout_marginLeft="47dp"
            android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toTopOf="@+id/button2" />

    </android.support.constraint.ConstraintLayout>

</FrameLayout>
