<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:visibility="gone">
    <!--android:visibility="gone"-->
    <!--Header-->
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:textSize="34sp"
            android:textColor="@android:color/white"
            android:text="@string/titleContent"
            android:id="@+id/content_title"/>
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_centerInParent="true"
            android:layout_marginEnd="@dimen/activity_horizontal_margin"
            android:src="@drawable/ic_bookmark_border_black_24dp"/>
    </RelativeLayout>

    <!--Image Header -->
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/holo_blue_light">
        <ImageView
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:scaleType="centerCrop"
            android:id="@+id/imageHeaderBackground"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignBottom="@+id/imageHeaderBackground"
            android:layout_marginStart="@dimen/activity_horizontal_margin"
            android:layout_marginBottom="@dimen/activity_vertical_margin"
            android:textColor="@android:color/white"
            android:textSize="14sp"
            android:text="@string/priceContent" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@+id/imageHeaderBackground"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="@dimen/activity_vertical_margin"
            android:textColor="@android:color/white"
            android:textSize="14sp"
            android:text="@string/dateContent"
            android:id="@+id/content_date"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@+id/imageHeaderBackground"
            android:layout_alignEnd="@+id/imageHeaderBackground"
            android:layout_marginBottom="@dimen/activity_vertical_margin"
            android:layout_marginEnd="@dimen/activity_horizontal_margin"
            android:textColor="@android:color/white"
            android:textSize="14sp"
            android:text="@string/timeContent"
            android:id="@+id/content_time" />

    </RelativeLayout>

    <!-- Description & Location-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/activity_vertical_margin">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:src="@drawable/ic_event_note_black_24dp"
                android:id="@+id/ic_description"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toEndOf="@id/ic_description"
                android:layout_marginStart="@dimen/activity_horizontal_margin"
                android:textSize="20sp"
                android:text="@string/descriptionContent"
                android:id="@+id/content_descripLabel"/>

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_below="@id/ic_description"
                android:layout_marginTop="@dimen/activity_vertical_margin"
                android:src="@drawable/ic_place_black_24dp"
                android:id="@+id/ic_place"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toEndOf="@+id/ic_place"
                android:layout_below="@id/content_descripLabel"
                android:layout_marginTop="@dimen/activity_vertical_margin"
                android:layout_marginStart="@dimen/activity_horizontal_margin"
                android:textSize="20sp"
                android:text="@string/locationContent"
                android:id="@+id/content_location" />
        </RelativeLayout>
    </LinearLayout>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/activity_vertical_margin">
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_map_black_24dp"/>
    </RelativeLayout>
</LinearLayout>